syntax = "proto3";

option csharp_namespace = "CloudSOA.ServiceHost.Protos";

package cloudsoa.servicehost;

/// <summary>
/// Broker → ServiceHost 通信协议
/// Broker 通过此服务将请求分发到 Service Host Pod
/// </summary>
service ComputeService {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc GetServiceInfo(ServiceInfoRequest) returns (ServiceInfoResponse);
}

message ExecuteRequest {
  string message_id = 1;
  string session_id = 2;
  string action = 3;
  bytes payload = 4;
  string user_data = 5;
}

message ExecuteResponse {
  string message_id = 1;
  string request_message_id = 2;
  bytes payload = 3;
  bool is_fault = 4;
  string fault_message = 5;
}

message HealthCheckRequest {}
message HealthCheckResponse {
  bool healthy = 1;
  string service_name = 2;
  int32 active_requests = 3;
}

message ServiceInfoRequest {}
message ServiceInfoResponse {
  string service_name = 1;
  repeated string actions = 2;
  string version = 3;
}
